--- a/css/styles.css
+++ b/css/styles.css
@@ -3,96 +3,771 @@
     margin: 0px;
     padding: 0px;
   }
+
   header {
-    text-align: center;
-  }
-  header {
-    text-align: center;
-    background-color: #508059;
-    color: black;
     padding-bottom: 1em;
     padding-top: 0.25em;
     margin-right: 0%;
     margin-left: 0%;
   }
+
   body {
-    background-color: #bbcfc5;
-    font-family: "Helvetica";
-    margin-top: 0;
+    background-color: #d1e4ff;
+    margin-top: 0.5%;
     margin-bottom: 0;
-    margin-right: 15%;
-    margin-left: 15%;
+    margin-right: 0%;
+    margin-left: 0%;
     text-align: center;
+    overflow-x: hidden;
   }
-  /* STYLE TEXT */
-  h1 {
-    text-align: center;
-    padding-bottom: 0.25em;
-  }
-h2 {
-    color: black;
-    margin: 0 auto;
-    text-align: center
-  }
-  #portfolio {
-    margin-top: 2em;
-    margin-bottom: 2em;
-  }
-  .words {
-    margin-right: 5%;
-    margin-left: auto;
-    left: 5px;
-  }
- .project {
-    margin-right: auto;
-    margin-left: 5%;
-    right: 5px;
- }
- #projectx {
-    margin-right: auto;
-    margin-left: 6%;
-    right: 5px;
- }
+
   div {
     display: flex;
     align-items: center;
     margin-bottom: 1em;
   }
-  #intro {
-    padding-bottom: 2em;
+
+  html {
+    scroll-behavior: smooth;
   }
-  /* STYLE IMAGES */
+
+  /* LINK FONTS */
+  .bowlby-one-sc-regular {
+    font-family: "Bowlby One SC", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+
+  .great-vibes-regular {
+    font-family: "Great Vibes", cursive;
+    font-weight: 400;
+    font-style: normal;
+  }
+
+  .acme-regular {
+    font-family: "Acme", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+
+  /* STYLE WELCOME HEADER */
+  #welcomeheader {  
+    background-color: #5B609F;
+    max-width: 1512.25px;
+    width: 100%;
+    height: 317px;
+    flex-shrink: 0;
+    margin-top: 40px;
+    position: relative;
+    display: flex;
+    font-family: "Bowlby One SC", sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+  }
+
+  #welcome, #mepic, #nameheader {
+    position: absolute;
+  }
+
+  #welcome {
+    font-size: 100px;
+    color: #d1e4ff;
+    top: 47px;
+    bottom: 441px;
+    z-index: 1;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+
   #mepic {
-    max-height: 75%;
-    max-width: 75%;
-    border-radius: 15%;
+    width: 245px;
+    height: 317px;
+    flex-shrink: 0;
+    aspect-ratio: 245/317;
+    z-index: 2;
+    display: block;
+    left: 50%;
+    transform: translateX(-50%);
   }
-  .smallpic {
-    max-height: 40%;
-    max-width: 40%;
-    border-radius: 15%;
+
+  #I, #AM {
+    font-size: 50px;
+    color: #d1e4ff;
+    margin-top: 150px;
+    position: absolute;
   }
+
+  #I {
+    position: absolute;
+    top: 90;
+    right: calc(50% + 160px);
+    font-size: 50px;
+    z-index: 2;
+  }
+
+  #AM {
+    position: absolute;
+    top: 90;
+    left: calc(50% + 140px);
+    font-size: 50px;
+    z-index: 2;
+  }
+
+  #nameheader {
+    display: flex;
+    width: 737px;
+    height: 157px;
+    justify-content: center;
+    align-items: center;
+    flex-shrink: 0;
+    color: #A96097;
+    font-family: "Great Vibes";
+    font-size: 125px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    margin-top: 425px;
+    z-index: 3;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+
+  /* STYLE ABOUT ME */
+  #aboutme {
+    width: 278px;
+    height: 65px;
+    color: #5B609F;
+    text-align: center;
+    font-family: "Bowlby One SC";
+    font-size: 50px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    margin: auto;
+    margin-top: 175px;
+    margin-bottom: 60px;
+  }
+
+  #aboutmedescription {
+    width: 491px;
+    height: 287px;
+    flex-shrink: 0;
+    color: #d1e4ff;
+    font-family: Acme;
+    font-size: 19px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    background-color: #5B609F;
+    border-radius: 15px;
+    margin-left: 15%;
+    padding: 15px;
+  }
+
+  #circlephoto {
+    max-width: 292.101px;
+    max-height: 292.101px;
+    flex-shrink: 0;
+    aspect-ratio: 292.10/365.10;
+    border-radius: 50%;
+    overflow: hidden;
+    object-fit: cover;
+    object-position: 50% 25%;
+    background-color: #A96097;
+    padding: 10px;
+    width: 100%;
+    height: 100%;
+  }
+
+  #scupic {
+    width: 167px;
+    height: 167px;
+    flex-shrink: 0;
+    aspect-ratio: 1/1;
+    bottom: 100px;
+    right: -80px;
+    z-index: 2;
+  }
+
+  #cspic {
+    width: 170px;
+    height: 170px;
+    flex-shrink: 0;
+    aspect-ratio: 1/1;
+    position: absolute;
+    bottom: -100px;
+    right: 80px;
+    z-index: 2;
+  }
+
+  #circlephoto, #scupic, #cspic {
+    display: flex;
+    position: relative;
+  }
+
+  /* STYLE SKILLS */
+  #skillheader {
+    width: 455px;
+    height: 56px;
+    flex-shrink: 0;
+    color: #d1e4ff;
+    text-align: center;
+    font-family: "Bowlby One SC";
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    margin-top: 10px;
+    margin-bottom: 20px;
+  }
+
+  #skills {
+    background-color: #A96097;
+    max-width: 1512.25px;
+    width: 100%;
+    margin-top: 10%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    height: 450px;
+    flex-shrink: 0;
+    padding: 20px 0;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+  }
+
+  .languages {
+    color: #d1e4ff;
+    text-align: center;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: #E4EFFF;
+    font-family: Acme;
+    font-size: 30px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    letter-spacing: 1.5px;
+  }
+
+  #cpluspluspic {
+    width: 95.041px;
+    height: 107px;
+    flex-shrink: 0;
+    aspect-ratio: 95.04/107.00;
+  }
+
+  #pythonpic {
+    width: 98px;
+    height: 98px;
+    flex-shrink: 0;
+    aspect-ratio: 1/1;
+  }
+
+  #javapic {
+    width: 90px;
+    height: 100px;
+    flex-shrink: 0;
+    aspect-ratio: 1/1;    
+  }
+
+  #nodejspic {
+    width: 130px;
+    height: 90px;
+    flex-shrink: 0;
+    aspect-ratio: 90.58/105.00;    
+  }
+
+  #mysqlpic {
+    width: 210px;
+    height: 114px;
+    flex-shrink: 0;
+    aspect-ratio: 1/1;    
+  }
+
+  #htmlpic {
+    width: 100px;
+    height: 106px;
+    flex-shrink: 0;
+    aspect-ratio: 128.23/106.00;    
+  }
+
+  #csspic {
+    width: 88.62px;
+    height: 104px;
+    flex-shrink: 0;
+    aspect-ratio: 88.62/104.00;    
+  }
+
+  #javascriptpic {
+    width: 100px;
+    height: 107px;
+    flex-shrink: 0;
+    aspect-ratio: 128.62/107.00;    
+  }
+
+  #reactpic {
+    width: 130px;
+    height: 104px;
+    flex-shrink: 0;
+    aspect-ratio: 1/1;    
+  }
+
+  #linuxpic {
+    width: 183.111px;
+    height: 103px;
+    flex-shrink: 0;
+    aspect-ratio: 183.11/103.00;    
+  }
+
+  .imgcols {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    margin-right: 5%;
+    margin-left: 1%;
+  }
+
+  .grid {
+    max-width: 1050px;
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    justify-items: center;
+    align-items: center;
+    gap: 30px 75px;
+    margin: 0 auto;
+  }
+
+  /* STYLE PROJECTS */
+  .sectionheader {
+    width: 100%;
+    max-width: 1512.25px;
+    height: 65px;
+    flex-shrink: 0;
+    color: #d1e4ff;
+    text-align: left;
+    padding-left: 2%;
+    font-family: "Bowlby One SC";
+    font-size: 50px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    margin-top: 10%;
+    position: relative;
+    background-color: #5B609F;
+    margin-bottom: 3%;
+    margin-left: auto;
+    margin-right: auto;
+    box-sizing: border-box;
+  }
+
+  .projecttitles {
+    color: #d1e4ff;
+    text-align: center;
+    font-family: "Bowlby One SC";
+    font-size: 25px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px; /* 120% */    
+    margin-bottom: 2%;
+  }
+
+  .projectdescriptions {
+    color: #d1e4ff;
+    text-align: center;
+    font-family: Acme;
+    font-size: 21px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;   
+    margin-top: 5px;
+    margin-bottom: 0;
+  }
+
+  .socialnetworkproject {
+    background-color: #A96097;
+    width: 1065px;
+    height: 454px;
+    flex-shrink: 0;
+    align-items: center;
+    left: 50%;
+    text-align: center;
+    display: flex;
+    transform: translateX(22%);
+    border-radius: 40px;
+    justify-content: flex-start;
+    margin-bottom: 4%;
+  }
+
+  #socialnetworkgithub {
+    display: flex;
+    width: 62px;
+    height: 62px;
+    align-items: center;
+    flex-shrink: 0;
+    margin-top: 15px;
+  }
+
+  #socialnetworkvid {
+    background-color: #5B609F;
+    padding: 5px;
+    margin-right: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  #socialnetworklineup {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    margin-right: 1%;
+    margin-left: 1%;
+    margin-top: 40px;
+  }
+
+  .projectlineup {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    margin-right: 1%;
+    margin-left: 1%;
+    margin-top: 60px;
+  }
+
+  #tripplannerproject {
+    background-color: #5B609F;
+    width: 1065px;
+    height: 454px;
+    flex-shrink: 0;
+    align-items: center;
+    left: 50%;
+    text-align: center;
+    display: flex;
+    transform: translateX(22%);
+    border-radius: 40px;
+    justify-content: flex-start;
+    margin-bottom: 4%;
+  }
+
+  #tripplannervid {
+    background-color: #A96097;
+    padding: 5px;
+    margin-right: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 55px;
+  }
+
+  #caseworksPic {
+    background-color: #5B609F;
+    padding: 5px;
+    margin-right: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .githubrepository {
+    display: flex;
+    width: 62px;
+    height: 62px;
+    flex-shrink: 0;
+    margin-top: 15px;
+    align-items: center;
+  }
+
+  .openlink {
+    display: flex;
+    width: 70px;
+    height: 70px;
+    flex-shrink: 0;
+    margin-top: 15px;
+    margin-left: 30px;
+  }
+
+  /* STYLE CONTACT ME */
+  #emailform, form {
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .formtext {
+    color: #5B609F;
+    font-family: Acme;
+    font-size: 21px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    padding: 10px;
+    margin-bottom: 20px;
+  }
+
+  button {
+    color: #d1e4ff;
+    font-family: Acme;
+    font-size: 21px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    background-color: #A96097;
+    border-radius: 10px;
+    width: 100px;
+    height: 40px;
+  }
+
+  #emailheader {
+    color: #A96097;
+    font-family: "Bowlby One SC";
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;    
+  }
+
+  #messagebox {
+    width: 350px;
+    height: 175px;
+  }
+
+  #contactlinkedin {
+    width: 156px;
+    height: 156px;
+    flex-shrink: 0;
+    aspect-ratio: 1/1;
+  }
+
+  #contactgithub {
+    width: 132px;
+    height: 132px;
+    flex-shrink: 0;
+    aspect-ratio: 1/1;  
+    padding: 25px; 
+  }
+
+  #contactsection {
+    transform: translateX(22%);
+  }
+
+  #contactphotos {
+    margin-left: 15%;
+  }
+
   /* STYLE NAV BAR */
+  nav {
+    background-color: #d1e4ff;
+    position: fixed;
+    top: 2;
+    max-width: 575px;
+    width: 100%;
+    height: 47px;
+    border-radius: 30px;
+    margin-left: 3%;
+    z-index: 4;
+    flex-wrap: wrap;
+  }
+    
   ul {
     list-style-type: none;
-    background-color: #508059;
     overflow: hidden;
     padding: 0.3em;
+    text-align: left;
   }
+
   li {
     display: inline;
+    font-family: "Bowlby One SC", sans-serif;
+    color: #A96097;
+    font-size: 22px;
+    margin-left: 2%;
+    margin-right: 2%;
   }
+
   li a {
+    padding: 0em;
     text-decoration: none;
-    color:  black;
-    font-size: 1.3em;
-    padding: 1em;
+    color: #A96097;
   }
+
   li a:hover {
-    background-color: #bbcfc5;
+    color: #5B609F;
   }
-  .x {
-    background-color: #508059;
-    padding-top: 1em;
-    padding-bottom: 1em;
+
+
+  /* ========== MOBILE RESPONSIVE STYLES ========== */
+@media (max-width: 1024px) {
+  /* Header adjustments */
+  #welcome {
+    font-size: 60px;
+    top: 20px;
   }
+
+  #I, #AM {
+    font-size: 28px;
+    margin-top: 100px;
+  }
+
+  #nameheader {
+    font-size: 70px;
+    margin-top: 300px;
+    width: 90%;
+  }
+
+  #mepic {
+    width: 180px;
+    height: auto;
+  }
+
+  /* About Me */
+  #aboutme {
+    font-size: 36px;
+    margin-top: 100px;
+  }
+
+  #aboutmedescription {
+    width: 40%;
+    height: auto;
+    font-size: 18px;
+    margin: 0 auto 30px 20px;
+  }
+
+  #circlephoto {
+    max-width: 200px;
+    max-height: 200px;
+  }
+
+  /* Skills */
+  #skills {
+    height: auto;
+    padding: 20px;
+    margin-top: 50px;
+  }
+
+  #skillheader {
+    font-size: 30px;
+    width: auto;
+  }
+
+  .grid {
+    grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+    gap: 20px 40px;
+  }
+
+  /* Projects */
+  .socialnetworkproject,
+  #tripplannerproject {
+    flex-direction: column;
+    width: 95%;
+    height: auto;
+    margin: 20px auto;
+    transform: none;
+    padding: 15px;
+  }
+
+  #socialnetworkvid,
+  #tripplannervid,
+  #seasonsquizembedded {
+    width: 100%;
+    height: auto;
+  }
+
+  .projecttitles {
+    font-size: 20px;
+    line-height: 26px;
+  }
+
+  .projectdescriptions {
+    font-size: 18px;
+  }
+
+  /* Contact */
+  #contactsection {
+    transform: none;
+    margin: 0 auto;
+    width: 100%;
+    text-align: center;
+  }
+
+  #contactphotos {
+    margin-left: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  #contactlinkedin,
+  #contactgithub {
+    width: 100px;
+    height: 100px;
+  }
+
+  /* Nav */
+  nav {
+    max-width: 100%;
+    height: auto;
+    border-radius: 20px;
+    margin: 0;
+    left: 0;
+    right: 0;
+  }
+
+  ul {
+    text-align: center;
+  }
+
+  li {
+    font-size: 18px;
+    margin: 0 5px;
+  }
+}
+
+@media (max-width: 600px) {
+  #welcome {
+    font-size: 40px;
+  }
+
+  #nameheader {
+    font-size: 50px;
+    margin-top: 250px;
+  }
+
+  #aboutme {
+    font-size: 28px;
+  }
+
+  #aboutmedescription {
+    font-size: 16px;
+    padding: 10px;
+    margin-right: 20%;
+    margin-left: 18%;
+    width: 60%;
+    margin-bottom: 20%;
+  }
+
+  #aboutme-container {
+    flex-wrap: wrap;
+    margin-bottom: 15%;
+  }
+
+  #aboutme-images {
+    flex-wrap: nowrap;
+  }
+
+  .projecttitles {
+    font-size: 18px;
+  }
+
+  .projectdescriptions {
+    font-size: 16px;
+  }
+
+  li {
+    font-size: 16px;
+  }
+}
